@@ -30,4 +30,7 @@
 
 * добавлен класс Generator - входного слоя сети, генерирующей шум для GAN;
 
+* добавлена библиотека Tensor2JPEG;
+* добавлена библиотека для работы с MNIST;
+* добавлен тест для работы с MNIST и toJPEG;
 
